--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مفصل حاضری و سبق رجسٹر</title>
+ <base href="/hifaz--tracker/">
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#3498db"/>
