--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مفصل حاضری و سبق رجسٹر</title>
-  <link rel="icon" type="image/png" href="icons/icon-192x192.png">
-<link rel="shortcut icon" href="icons/icon-192x192.png">
+  <link rel="icon" type="image/png" href="icon-192x192.png">
+<link rel="shortcut icon" href="icon-192x192.png">
 
 
     <!-- PWA Meta Tags -->
