--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#3498db"/>
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
     <link rel="manifest" href="manifest.json">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
