--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Manifest and Icons (پاتھ درست کر دیے گئے ہیں) -->
     <meta name="theme-color" content="#3498db"/>
     <link rel="manifest" href="./manifest.json">
-    <link rel="apple-touch-icon" href="./icon-192×192.png">
+    <link rel="apple-touch-icon" href="./icon-192.png">
     
     <!-- Using Font Awesome from CDN for other icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
